fix extra space at bottom and make side panels collapsible

--- a/src/CodeEditor/CodeEditor.css
+++ b/src/CodeEditor/CodeEditor.css
@@ -1,5 +1,6 @@
 .ace_editor {
     background-color: var(--background-1);
+    height: 100% !important;
 }
 
 .ace_gutter {
